--- a/demo/src/client/styles.css
+++ b/demo/src/client/styles.css
@@ -6,13 +6,29 @@ body {
     padding: 2rem;
 }
 
-.container {
+h1 {
+    margin: 0;
+    padding-block: 10px;
+    font-size: 1.4rem;
+}
+
+#panel-container {
     background: #fff;
-    padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     max-width: 600px;
     width: 100%;
+}
+
+.container {
+    padding: 2rem;
+}
+
+header {
+    padding: 10px;
+    font-size: 0.7rem;
+    justify-items: center;
+    gap: 10px;
 }
 
 h1 {
@@ -95,3 +111,15 @@ button.delete {
 /* .todo-item.remove {
     animation: fadeOut 0.5s forwards;
 } */
+
+.statuses {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: #fbedff;
+}
+
+.label {
+    display: flex;
+    align-items: center;
+    font-weight: bold;
+}
